--- a/www/runtime.html
+++ b/www/runtime.html
@@ -6,6 +6,6 @@
   <body>
     <div id="root">
     </div>
-    <script src="/static/bundle.js"></script>
+    <script src="/static/runtime.bundle.js"></script>
   </body>
 </html>
