handsontableを表示するところまで

--- a/www/editor.html
+++ b/www/editor.html
@@ -2,10 +2,16 @@
 <html>
   <head>
     <title>Redux todos with undo example</title>
+    <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="/bower_components/handsontable/dist/handsontable.full.min.css"/>
   </head>
   <body>
     <div id="root">
     </div>
+    <script src="/bower_components/zeroclipboard/dist/ZeroClipboard.min.js"></script>
+    <script src="/bower_components/pikaday/pikaday.js"></script>
+    <script src="/bower_components/moment/min/moment.min.js"></script>
+    <script src="/bower_components/handsontable/dist/handsontable.min.js"></script>
     <script src="/static/editor.bundle.js"></script>
   </body>
 </html>
