--- a/www/editor.html
+++ b/www/editor.html
@@ -8,6 +8,8 @@
   <body>
     <div id="root">
     </div>
+    <script src="/node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="/bower_components/zeroclipboard/dist/ZeroClipboard.min.js"></script>
     <script src="/bower_components/pikaday/pikaday.js"></script>
     <script src="/bower_components/moment/min/moment.min.js"></script>
