--- a/www/editor.html
+++ b/www/editor.html
@@ -10,6 +10,7 @@
     <script src="/node_modules/jquery/dist/jquery.min.js"></script>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="/node_modules/webcola/WebCola/cola.min.js"></script>
+    <script src="/node_modules/tinymce/tinymce.min.js"></script>
     <script src="/bower_components/pikaday/pikaday.js"></script>
     <script src="/bower_components/moment/min/moment.min.js"></script>
     <script src="/static/editor.bundle.js"></script>
