--- a/www/preview.html
+++ b/www/preview.html
@@ -4,10 +4,20 @@
     <title>Preview</title>
     <link type="text/css" rel="stylesheet" href="https://fastsurvey.m3.com/css/common.css" />
     <link type="text/css" rel="stylesheet" href="https://fastsurvey.m3.com/css/survey.css" />
+    <style>
+      .m3-enquete__user-agent-group--SP #surveyBox,
+      .m3-enquete__user-agent-group--APP #surveyBox,
+      .m3-enquete__user-agent-group--SP .questionsEditBox,
+      .m3-enquete__user-agent-group--APP .questionsEditBox {
+        width: 320px;
+      }
+    </style>
   </head>
   <body class="m3-enquete__user-agent-group--PC">
+
     <div id="root">
     </div>
+    <script src="/static/validator.bundle.js"></script>
     <script src="/static/preview.bundle.js"></script>
   </body>
 </html>
