--- a/www/editor.html
+++ b/www/editor.html
@@ -25,5 +25,10 @@
     <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="/node_modules/tinymce/tinymce.min.js"></script>
     <script src="/static/editor.bundle.js"></script>
+  <script>
+$.getJSON('sample.json').then(function(json) {
+  SurveyDesigner.Designer(json);
+});
+  </script>
   </body>
 </html>
