不具合の修正
・既存アンケートでプレビューを実行するとエラー　※公開プレビューだけは大丈夫らしい
・配信依頼確認をクリックしたら500エラー
・URLを直に叩くとクライアントや提携アカウントでも新デザインアンケートを表示できる

--- a/www/preview.html
+++ b/www/preview.html
@@ -17,9 +17,12 @@
     </div>
     <script src="/static/preview.bundle.js"></script>
     <script>
-window.loadState = (initialState) => {
-  const el = document.getElementById('root');
-  SurveyDesigner.Preview(el, initialState);
+window.loadState = (json) => {
+  // そのまま渡してもjson2ImmutableStateで正しくparseできないためobjectを作り直す
+  // 原因は不明
+  var survey = JSON.parse(JSON.stringify(json));
+  var el = document.getElementById('root');
+  SurveyDesigner.Preview(el, { survey: survey });
 };
     </script>
   </body>
