--- a/www/preview.html
+++ b/www/preview.html
@@ -17,13 +17,13 @@
     </div>
     <script src="/static/preview.bundle.js"></script>
     <script>
-window.loadState = (json) => {
-  // そのまま渡してもjson2ImmutableStateで正しくparseできないためobjectを作り直す
-  // 原因は不明
-  var survey = JSON.parse(JSON.stringify(json));
+window.addEventListener('message', function(e) {
+  var survey = JSON.parse(e.data);
+  console.log(survey);
   var el = document.getElementById('root');
   SurveyDesigner.Preview(el, { survey: survey });
-};
+}, false);
+window.opener.postMessage('surveyRequest', '*');
     </script>
   </body>
 </html>
