--- a/www/index.html
+++ b/www/index.html
@@ -29,7 +29,7 @@
     <script src="/static/editor.bundle.js"></script>
     <script>
 $.getJSON('/sample.json').then(function(survey) {
-  const el = document.getElementById('root');
+  var el = document.getElementById('root');
   SurveyDesigner.Editor(el, {
     survey: survey,
     options: {
