--- a/www/preview.html
+++ b/www/preview.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Preview</title>
+    <title>SurveyDesinger Preview</title>
     <style>
       .m3-enquete__user-agent-group--SP #surveyBox,
       .m3-enquete__user-agent-group--APP #surveyBox,
