Checkbox, Radio, MultiNumberの詳細表示を実装

--- a/www/index.html
+++ b/www/index.html
@@ -34,6 +34,7 @@ $.getJSON('/sample.json').then(function(survey) {
     survey: survey,
     options: {
       previewUrl: '/preview.html',
+      showDetailUrl: '/detail.html',
     },
   });
 });
