--- a/www/index.html
+++ b/www/index.html
@@ -35,6 +35,7 @@ $.getJSON('/sample.json').then(function(survey) {
     options: {
       previewUrl: '/preview.html',
       showDetailUrl: '/detail.html',
+      errorHandlerUrl: '/api/log/jserror',
     },
   });
 });
