--- a/www/preview.html
+++ b/www/preview.html
@@ -18,6 +18,10 @@
     <script src="/static/preview.bundle.js"></script>
     <script>
 window.addEventListener('message', function(e) {
+  if (e.origin !== location.origin) {
+    alert('オリジンが一致しません');
+    return;
+  }
   if (e.data.type !== 'surveyResponse') return;
   var survey = JSON.parse(e.data.value);
   var el = document.getElementById('root');
