--- a/www/detail.html
+++ b/www/detail.html
@@ -30,6 +30,7 @@ window.addEventListener('message', function(e) {
     options: {
       showDetail: true,
       showAllPages: true,
+      showOutputNo: true,
     }
   });
 }, false);
