--- a/www/preview.html
+++ b/www/preview.html
@@ -17,24 +17,49 @@
     </div>
     <script src="/static/preview.bundle.js"></script>
     <script>
-window.addEventListener('message', function(e) {
-  if (e.origin !== location.origin) {
-    alert('オリジンが一致しません');
-    return;
-  }
-  if (e.data.type !== 'surveyResponse') return;
-  var survey = JSON.parse(e.data.value);
-  var el = document.getElementById('root');
-  SurveyDesigner.Preview(el, {
-    survey: survey,
-    options: {
-      pageLoadedFn: function(survey, runtime) {
-        var nodeId = runtime.getCurrentNodeId();
+var m = location.search.match(/json=([^&]+)/);
+if (m) {
+  var xhr = new XMLHttpRequest();
+  xhr.open('GET', m[1], true);
+  xhr.onreadystatechange = function(){
+    // 本番用
+    if (xhr.readyState === 4 && xhr.status !== 200) {
+      alert(m[1] + 'のファイルの取得に失敗しました');
+      return;
+    } else if (xhr.readyState === 4 && xhr.status === 200) {
+      var survey = JSON.parse(xhr.responseText);
+      var el = document.getElementById('root');
+      SurveyDesigner.Preview(el, {
+        survey: survey,
+        options: {
+          pageLoadedFn: function(survey, runtime) {
+            var nodeId = runtime.getCurrentNodeId();
+          },
+        },
+      });
+    }
+  };
+  xhr.send(null);
+} else {
+  window.addEventListener('message', function(e) {
+    if (e.origin !== location.origin) {
+      alert('オリジンが一致しません');
+      return;
+    }
+    if (e.data.type !== 'surveyResponse') return;
+    var survey = JSON.parse(e.data.value);
+    var el = document.getElementById('root');
+    SurveyDesigner.Preview(el, {
+      survey: survey,
+      options: {
+        pageLoadedFn: function(survey, runtime) {
+          var nodeId = runtime.getCurrentNodeId();
+        },
       },
-    },
-  });
-}, false);
-window.opener.postMessage({ type: 'surveyRequest' }, '*');
+    });
+  }, false);
+  window.opener.postMessage({ type: 'surveyRequest' }, '*');
+}
     </script>
   </body>
 </html>
