Fix css path in www/index

--- a/www/index.html
+++ b/www/index.html
@@ -42,7 +42,7 @@ $.getJSON('/sample.json').then(function(survey) {
       cssOptions: [
         { title: 'XMLモード',
           runtimeUrls: [
-            'http://localhost:3000/ignore/compiled.css'
+            '/ignore/compiled.css'
           ],
           previewUrls: []
         },
@@ -53,8 +53,8 @@ $.getJSON('/sample.json').then(function(survey) {
             'https://fastsurvey.m3.com/css/survey.css'
           ],
           previewUrls: [
-            'http://localhost:3000/css/preview/detail.css',
-            'http://localhost:3000/css/preview/preview.css'
+            '/css/preview/detail.css',
+            '/css/preview/preview.css'
           ]
         }
       ]
