cssをJavaScriptに含めずファイルとして出力するように修正

--- a/www/image.html
+++ b/www/image.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css"/>
     -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
+    <link rel="stylesheet" href="/static/css/image.css"/>
     <style>
       #global-navigation {
         height: 36px;
