--- a/www/preview.html
+++ b/www/preview.html
@@ -10,6 +10,7 @@
         width: 320px;
       }
     </style>
+    <link rel="stylesheet" href="/static/css/preview.css"/>
   </head>
   <body class="m3-enquete__user-agent-group--PC">
 
