--- a/www/index.html
+++ b/www/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>SurveyDesinger Editor</title>
+    <title>SurveyDesigner Editor</title>
     <!--
     <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css"/>
     -->
