CSSのロード周りの修正
1. デフォルトのCSSを定義しCSSのURLが定義されていない場合はそちらを利用するように修正
2. デフォルトのCSSが指定されておらず.envががある場合はデフォルトのCSSを.envのものに設定

--- a/www/preview.html
+++ b/www/preview.html
@@ -18,6 +18,12 @@
     <script src="/static/preview.bundle.js"></script>
     <script>
 var m = location.search.match(/json=([^&]+)/);
+var options = {
+  pageLoadedFn: function(survey, runtime) {
+    var nodeId = runtime.getCurrentNodeId();
+  }
+};
+
 if (m) {
   var xhr = new XMLHttpRequest();
   xhr.open('GET', m[1], true);
@@ -31,11 +37,7 @@ if (m) {
       var el = document.getElementById('root');
       SurveyDesigner.Preview(el, {
         survey: survey,
-        options: {
-          pageLoadedFn: function(survey, runtime) {
-            var nodeId = runtime.getCurrentNodeId();
-          },
-        },
+        options: options
       });
     }
   };
@@ -51,11 +53,7 @@ if (m) {
     var el = document.getElementById('root');
     SurveyDesigner.Preview(el, {
       survey: survey,
-      options: {
-        pageLoadedFn: function(survey, runtime) {
-          var nodeId = runtime.getCurrentNodeId();
-        },
-      },
+      options: options
     });
   }, false);
   window.opener.postMessage({ type: 'surveyRequest' }, '*');
