ライブラリの追加・変更

--- a/www/index.html
+++ b/www/index.html
@@ -24,6 +24,7 @@
     </div>
     <div id="root">
     </div>
+    <script src="//ajax.aspnetcdn.com/ajax/jshint/r07/jshint.js"></script>
     <script src="/node_modules/jquery/dist/jquery.min.js"></script>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="/node_modules/tinymce/tinymce.min.js"></script>
