Matrixで排他のセルが動作しない不具合を修正

--- a/www/index.html
+++ b/www/index.html
@@ -27,7 +27,7 @@
     <script src="//ajax.aspnetcdn.com/ajax/jshint/r07/jshint.js"></script>
     <script src="/node_modules/jquery/dist/jquery.min.js"></script>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="/node_modules/tinymce/tinymce.min.js"></script>
+    <script src="/node_modules/tinymce/tinymce.js"></script>
     <script src="/static/editor.bundle.js"></script>
     <script>
 $.getJSON('/sample.json').then(function(survey) {
