--- a/www/index.html
+++ b/www/index.html
@@ -2,80 +2,51 @@
 <html>
   <head>
     <title>SurveyDesigner Editor</title>
-    <!--
     <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css"/>
-    -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
-    <link rel="stylesheet" href="/static/css/editor.css"/>
-    <style>
-      #global-navigation {
-        height: 36px;
-        background-color: black;
-        color: white;
-      }
-      #root {
-        height: calc(100% - 36px);
-      }
-    </style>
   </head>
   <body>
-    <div id="global-navigation">
-      Header
+    <div class="container">
+      <div class="jumbotron">
+        <h1>survey-designer-js</h1>
+        <p>DEMO</p>
+      </div>
+      <table class="table table-bordered">
+        <thead>
+          <tr>
+            <th>サンプル名</th>
+            <th>編集画面</th>
+            <th>動作プレビュー画面</th>
+            <th>詳細プレビュー画面</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>空のアンケート</td>
+            <td>
+              <a target="_blank" href="edit.html?survey=survey/init.json">LINK</a>
+              <a target="_blank" href="edit.html?survey=survey/init.json&amp;env=development">(dev mode)</a>
+            </td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>アンケートに関するアンケート</td>
+            <td>
+              <a target="_blank" href="edit.html?survey=survey/survey.json">LINK</a>
+              <a target="_blank" href="edit.html?survey=survey/survey.json&amp;env=development">(dev mode)</a>
+            </td>
+            <td>
+              <a target="_blank" href="preview.html?survey=survey/survey.json">LINK</a>
+              <a target="_blank" href="preview.html?survey=survey/survey.json&amp;env=development">(dev mode)</a>
+            </td>
+            <td>
+              <a target="_blank" href="detail.html?survey=survey/survey.json">LINK</a>
+              <a target="_blank" href="detail.html?survey=survey/survey.json&amp;env=development">(dev mode)</a>
+            </td>
+          </tr>
+        </tbody>
+      </table>
     </div>
-    <div id="root">
-    </div>
-    <script src="//ajax.aspnetcdn.com/ajax/jshint/r07/jshint.js"></script>
-    <script src="/node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="/node_modules/tinymce/tinymce.js"></script>
-    <script src="/static/editor.bundle.js"></script>
-    <script>
-var fsCss = {
-  title: 'FSモード',
-  runtimeUrls: [
-    'http://fastsurvey.m3.com/css/common.css',
-    'http://fastsurvey.m3.com/css/survey.css',
-    'http://cdnjs.cloudflare.com/ajax/libs/tooltipster/3.3.0/css/themes/tooltipster-light.min.css',
-    '/static/css/runtime.css'
-  ],
-  previewUrls: [
-    '/static/css/preview.css'
-  ],
-  detailUrls: [
-    '/static/css/detail.css'
-  ]
-};
-var xmlCss = {
-  title: 'XMLモード',
-  runtimeUrls: [
-    'http://cdnjs.cloudflare.com/ajax/libs/tooltipster/3.3.0/css/themes/tooltipster-light.min.css',
-    '/css/default/runtime.css',
-  ],
-  previewUrls: [
-    '/css/default/preview.css',
-  ],
-  detailUrls: [
-    '/css/default/detail.css'
-  ]
-};
-$.getJSON('/sample.json').then(function(survey) {
-  var el = document.getElementById('root');
-  SurveyDesigner.Editor(el, {
-    survey: survey,
-    options: {
-      headerHtml: '<div class="header"><h1 class="header__title">survey-desinger-js</h1></div>',
-      defaultCss: xmlCss,
-      cssOptions: [ fsCss, xmlCss ],
-      previewUrl: '/preview.html',
-      showDetailUrl: '/detail.html',
-      imageManagerUrl: '/image.html',
-      imageListUrl: '/images.json',
-      saveImageUrl: '/save',
-      deleteImageUrl: '/delete',
-      cacheSuffix: new Date().getTime().toString(),
-    },
-  });
-});
-    </script>
   </body>
 </html>
