--- a/www/detail.html
+++ b/www/detail.html
@@ -15,26 +15,47 @@
 
     <div id="root">
     </div>
-    <script src="/static/detail.bundle.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/fetch/2.0.3/fetch.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/url-search-params/0.10.0/url-search-params.js"></script>
+    <script src="/survey-designer-js/detail.bundle.js"></script>
     <script>
-window.addEventListener('message', function(e) {
-  if (e.origin !== location.origin) {
-    alert('オリジンが一致しません');
-    return;
-  }
-  if (e.data.type !== 'surveyResponse') return;
-  var survey = JSON.parse(e.data.value);
-  var el = document.getElementById('root');
-  SurveyDesigner.Detail(el, {
-    survey: survey,
-    options: {
-      showDetail: true,
-      showAllPages: true,
-      cacheSuffix: new Date().getTime().toString(),
-    }
+var url = new URL(location.href);
+var surveyUrl = url.searchParams.get('survey');
+if (surveyUrl) {
+  fetch(surveyUrl).then(function(response) {
+    return response.json();
+  }).then(function(survey) {
+    console.log(survey);
+    var el = document.getElementById('root');
+    SurveyDesigner.Detail(el, {
+      survey: survey,
+      options: {
+        showDetail: true,
+        showAllPages: true,
+        cacheSuffix: new Date().getTime().toString(),
+      }
+    });
   });
-}, false);
-window.opener.postMessage({ type: 'surveyRequest' }, '*');
+} else {
+  window.addEventListener('message', function(e) {
+    if (e.origin !== location.origin) {
+      alert('オリジンが一致しません');
+      return;
+    }
+    if (e.data.type !== 'surveyResponse') return;
+    var survey = JSON.parse(e.data.value);
+    var el = document.getElementById('root');
+    SurveyDesigner.Detail(el, {
+      survey: survey,
+      options: {
+        showDetail: true,
+        showAllPages: true,
+        cacheSuffix: new Date().getTime().toString(),
+      }
+    });
+  }, false);
+  window.opener.postMessage({ type: 'surveyRequest' }, '*');
+}
     </script>
   </body>
 </html>
