--- a/www/preview.html
+++ b/www/preview.html
@@ -15,9 +15,10 @@
 
     <div id="root">
     </div>
-    <script src="/static/preview.bundle.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/fetch/2.0.3/fetch.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/url-search-params/0.10.0/url-search-params.js"></script>
+    <script src="/survey-designer-js/preview.bundle.js"></script>
     <script>
-var m = location.search.match(/json=([^&]+)/);
 var options = {
   headerHtml: '<div class="header"><h1 class="header__title">survey-desinger-js</h1></div>',
   cacheSuffix: new Date().getTime().toString(),
@@ -26,24 +27,18 @@ var options = {
   }
 };
 
-if (m) {
-  var xhr = new XMLHttpRequest();
-  xhr.open('GET', m[1], true);
-  xhr.onreadystatechange = function(){
-    // 本番用
-    if (xhr.readyState === 4 && xhr.status !== 200) {
-      alert(m[1] + 'のファイルの取得に失敗しました');
-      return;
-    } else if (xhr.readyState === 4 && xhr.status === 200) {
-      var survey = JSON.parse(xhr.responseText);
-      var el = document.getElementById('root');
-      SurveyDesigner.Preview(el, {
-        survey: survey,
-        options: options
-      });
-    }
-  };
-  xhr.send(null);
+var url = new URL(location.href);
+var surveyUrl = url.searchParams.get('survey');
+if (surveyUrl) {
+  fetch(surveyUrl).then(function(response) {
+    return response.json();
+  }).then(function(survey) {
+    var el = document.getElementById('root');
+    SurveyDesigner.Preview(el, {
+      survey: survey,
+      options: options
+    });
+  });
 } else {
   window.addEventListener('message', function(e) {
     if (e.origin !== location.origin) {
